# docs/swagger.yaml
@@ -166,6 +166,10 @@ definitions:
       createdAt:
         example: "2024-03-23T12:00:00Z"
         type: string
+      messageId:
+        description: Added messageId field
+        example: 1
+        type: integer
       senderId:
         example: 1
         type: integer
@@ -195,7 +199,8 @@ definitions:
       createdAt:
         example: "2024-03-23T12:00:00Z"
         type: string
-      id:
+      messageId:
+        description: Changed from id to messageId
         example: 1
         type: integer
       senderId:
