# domain/dto/message_dto.go
@@ -8,7 +8,7 @@ import (
 
 // MessageResponse is a DTO for message responses
 type MessageResponse struct {
-	ID             int       `json:"id"`
+	MessageID      int       `json:"messageId"` // Changed from "id" to "messageId"
 	ChatID         int       `json:"chatId"`
 	SenderID       int       `json:"senderId"`
 	SenderNickname string    `json:"senderNickname"`
@@ -29,7 +29,7 @@ type ChatMessagesResponse struct {
 // NewMessageResponse creates a new MessageResponse from a Message model
 func NewMessageResponse(message *models.Message) *MessageResponse {
 	return &MessageResponse{
-		ID:             message.ID,
+		MessageID:      message.ID, // Changed from ID to MessageID
 		ChatID:         message.ChatId,
 		SenderID:       message.SenderId,
 		SenderNickname: message.SenderNickname,
